Refactor MCPToolSpecificationFactory